--- a/sfg_battler.ipynb
+++ b/sfg_battler.ipynb
@@ -11,6 +11,77 @@
      "output_type": "stream",
      "text": [
       "Clicking on!\n",
+      "Found monster priority at Point(x=434, y=755)\n",
+      "found attack image at Point(x=954, y=1342)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=398)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "did not find loot image\n",
+      "Found monster priority at Point(x=2124, y=754)\n",
+      "found attack image at Point(x=954, y=1342)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "did not find loot image\n",
+      "Found monster priority at Point(x=2124, y=755)\n",
+      "found attack image at Point(x=954, y=1342)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "did not find loot image\n",
+      "Found monster priority at Point(x=435, y=755)\n",
+      "found attack image at Point(x=954, y=1342)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=398)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "did not find loot image\n",
+      "Found monster priority at Point(x=436, y=756)\n",
+      "found attack image at Point(x=954, y=1342)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=398)\n",
+      "found loot location Point(x=1682, y=398)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "did not find loot image\n",
+      "Found monster priority at Point(x=1279, y=752)\n",
+      "found attack image at Point(x=954, y=1342)\n",
+      "Clicking off!\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=398)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "found loot location Point(x=1682, y=396)\n",
+      "did not find loot image\n",
+      "Clicking on!\n",
+      "Clicking on!\n",
       "moving onto attack search\n",
       "did not find attack image\n",
       "did not find loot image\n",
@@ -24,6 +95,13 @@
       "did not find attack image\n",
       "did not find loot image\n",
       "moving onto attack search\n",
+      "did not find attack image\n",
+      "did not find loot image\n",
+      "moving onto attack search\n",
+      "did not find attack image\n",
+      "did not find loot image\n",
+      "moving onto attack search\n",
+      "Clicking on!\n",
       "did not find attack image\n",
       "did not find loot image\n",
       "moving onto attack search\n",
@@ -37,170 +115,17 @@
       "Clicking on!\n",
       "moving onto attack search\n",
       "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=397)\n",
-      "found loot location Point(x=1684, y=458)\n",
-      "found loot location Point(x=1684, y=458)\n",
-      "found loot location Point(x=1684, y=458)\n",
-      "found loot location Point(x=1684, y=458)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "Found monster priority at Point(x=2122, y=754)\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "Found monster priority at Point(x=1277, y=754)\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "Found monster priority at Point(x=2122, y=754)\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "Found monster priority at Point(x=433, y=754)\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "Found monster priority at Point(x=432, y=991)\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "found attack image at Point(x=954, y=1342)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=398)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "found loot location Point(x=1684, y=394)\n",
-      "did not find loot image\n",
-      "Found monster priority at Point(x=2122, y=754)\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
-      "did not find loot image\n",
-      "moving onto attack search\n",
-      "did not find attack image\n",
+      "Clicking off!\n",
       "did not find loot image\n",
       "Clicking off!\n",
+      "Clicking off!\n",
+      "Clicking off!\n",
+      "Clicking off!\n",
+      "Clicking off!\n",
+      "Clicking off!\n",
+      "Clicking on!\n",
       "moving onto attack search\n",
-      "did not find attack image\n",
-      "found loot location Point(x=1414, y=536)\n",
-      "found loot location Point(x=1414, y=536)\n",
-      "found loot location Point(x=1414, y=534)\n",
-      "found loot location Point(x=1414, y=536)\n",
-      "found loot location Point(x=1414, y=536)\n",
-      "found loot location Point(x=1414, y=536)\n"
+      "did not find attack image\n"
      ]
     }
    ],
@@ -226,7 +151,7 @@
     "    Searches for the \"fight_button.png\" image and clicks on it.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        attackloc = pyautogui.locateOnScreen('fight_button.png', confidence=0.9, grayscale=True)\n",
+    "        attackloc = pyautogui.locateOnScreen('fight_button.png', region=(650, 1290, 600, 130), confidence=0.9, grayscale=True)\n",
     "\n",
     "        if attackloc:\n",
     "            print(\"found attack image at\", pyautogui.center(attackloc))\n",
@@ -248,22 +173,14 @@
     "    \"\"\"\n",
     "    while True:\n",
     "        try:\n",
-    "            lootloc = pyautogui.locateOnScreen('lootbox.png', confidence=0.9, grayscale=True)\n",
+    "            lootloc = pyautogui.locateOnScreen('lootbox.png', region=(1650, 378, 70, 70), confidence=0.9, grayscale=True)\n",
     "            if lootloc:\n",
     "                print(\"found loot location\", pyautogui.center(lootloc))\n",
     "                lootx, looty = pyautogui.center(lootloc)\n",
     "                pydirectinput.moveTo(lootx - 51, looty)  # Adjust offset as needed\n",
-    "                time.sleep(0.1)\n",
+    "                time.sleep(0.0001)\n",
     "                pydirectinput.click(lootx - 51, looty)\n",
-    "                pydirectinput.moveTo(lootx - 51, looty)  # Adjust offset as needed\n",
-    "                #time.sleep(0.1)\n",
-    "                #pydirectinput.click(lootx - 51, looty)\n",
-    "                #pydirectinput.moveTo(lootx - 51, looty)  # Adjust offset as needed\n",
-    "                #time.sleep(0.1)\n",
-    "                #pydirectinput.click(lootx - 51, looty)\n",
-    "                #pydirectinput.moveTo(lootx - 51, looty)  # Adjust offset as needed\n",
-    "                #time.sleep(0.1)\n",
-    "                #pydirectinput.click(lootx - 51, looty)\n",
+    "                pydirectinput.moveTo(lootx - 50, looty)  # Adjust offset as needed\n",
     "\n",
     "        except pyautogui.ImageNotFoundException:\n",
     "            lootloc = False\n",
@@ -296,7 +213,7 @@
     "    return None\n",
     "\n",
     "# Example usage\n",
-    "image_list = ['sfg_350dmg.png', 'sfg_275dmg.png', 'sfg_200dmg.png', 'sfg_140dmg.png', 'sfg_90dmg.png', 'sfg_50dmg.png', 'sfg_20dmg.png']\n",
+    "image_list = ['sfg_450dmg.png', 'sfg_350dmg.png', 'sfg_300dmg.png', 'sfg_275dmg.png', 'sfg_225dmg.png', 'sfg_200dmg.png', 'sfg_150dmg.png', 'sfg_140dmg.png', 'sfg_100dmg.png', 'sfg_90dmg.png', 'sfg_50dmg.png', 'sfg_40dmg.png', 'sfg_20dmg.png']\n",
     "\n",
     "def click_priority():\n",
     "    location = prioritize_images(image_list, confidence=0.9)\n",
@@ -328,13 +245,15 @@
     "    while True:\n",
     "        if clicking:\n",
     "            prioritize_images(image_list, confidence=0.9)\n",
+    "            time.sleep(0.1)\n",
     "            click_priority()\n",
-    "            time.sleep(1)\n",
+    "            time.sleep(2.6)\n",
     "            attack_click()  # Call attack_click only once\n",
+    "            time.sleep(2.7)\n",
     "            pydirectinput.moveTo(1684 - 51, 394)\n",
     "            pydirectinput.moveTo(1684 - 51, 393)\n",
-    "            pydirectinput.click(1684 - 51,394)\n",
-    "            time.sleep(2.75)\n",
+    "            pydirectinput.click(1684 - 51, 394)\n",
+    "            time.sleep(2.6)\n",
     "            loot_collector()  # Call loot_collector only once\n",
     "        else:\n",
     "            time.sleep(0.1)\n",
